--- a/main.css
+++ b/main.css
@@ -12,3 +12,38 @@ main {
 li {
     margin-bottom: 5px;
 }
+
+/* responsive */
+
+/* mobile phones */
+@media (min-width: 0px){
+    body {
+        border-color: red;
+    }
+}
+
+@media (min-width: 376px) {
+  body {
+    border-color: blue;
+  }
+}
+
+/* tablets */
+@media (min-width: 426px) {
+  body {
+    border-color: green;
+  }
+}
+
+@media (min-width: 769px) {
+  body {
+    border-color: yellow;
+  }
+}
+
+/* desktops */
+@media (min-width: 1025px) {
+  body {
+    border-color: hotpink;
+  }
+}
